--- a/site_web/index.html
+++ b/site_web/index.html
@@ -13,8 +13,7 @@
 <body>
     <div class="topnav">
         <a class="gauche">Projet IOC 2024</a>
-        <!-- <droite onclick="document.location='https://github.com/'">Le code</droite> -->
-        <a class="droite" href="https://github.com" target="_blank">Le code</a>
+        <a class="droite" href="https://github.com/lowen9/Projet_IOC/tree/master" target="_blank">Le code</a>
     </div>
 
     <div class="row">
